--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>brandbaker.github.io</title>
+  <title>digitalmediacampaign.com</title>
     <style type="text/css" media="all">
         * {
             box-sizing: border-box;
@@ -64,7 +64,7 @@
 
     <div class="container">
       <div class="greeting">
-        <h1>brandbaker.github.io</h1>
+        <h1>digitalmediacampaign.com</h1>
 
         <p>Hello~</p>
       </div>
